<resources>
    <string name="app_name">AdivinaAnimal</string>
    <string name="action_settings">Settings</string>

    <string name="msg_yes">Si</string>
    <string name="msg_no">No</string>

    <string name="msg_question">¿ Estas pensando en un animal ?</string>
    <string name="msg_question2">¿ Cual es el nombre del animal ?</string>

    <string name="msg_save">Guardar</string>
    <string name="msg_cancel">Cancelar</string>
</resources>
